<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.example.tlin7877.assignment_1"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkGrey"
    tools:context="com.example.tlin7877.assignment_1.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/fullscreen_content"
        android:src="@drawable/image01"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="@dimen/regular_padding"/>
    <TextView
        android:id="@+id/txtMainPageWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:padding="@dimen/regular_padding"
        android:text="@string/longtext_welcome"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_toBottomOf="@+id/fullscreen_content" />
    <Button
        android:id="@+id/btnSignIn"
        android:theme="@style/buttonStyle"
        android:background="@drawable/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/regular_padding" />
    <Button
        android:id="@+id/btnJoinRewards"
        android:theme="@style/buttonStyle"
        android:background="@drawable/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_join_rewards"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@+id/txtMainPageWelcome"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/regular_padding"/>

</android.support.design.widget.CoordinatorLayout>
